--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^1.9.0",
+    "react-router": "^7.6.0",
+    "react-router-dom": "^7.6.0",
+    "express": "^5.1.0",
+    "mysql": "^2.18.1"
   },
   "scripts": {
     "start": "react-scripts start",
